<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            style="@style/headerText"
            android:text="@string/label_account_info"
            android:layout_marginBottom="20dp"/>

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/nameImageView"
                android:src="@drawable/ic_name"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/nama"
                android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:text="@string/label_jabatan"
                android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/mobileImageView"
                android:src="@drawable/ic_mobile"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_hp"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsTextMain"/>

            <TextView
                android:text="@string/no_hp"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/emailImageView"
                android:src="@drawable/ic_email"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_email"
                android:layout_toEndOf="@id/emailImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:text="@string/email"
                android:layout_toEndOf="@id/emailImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/addressImageView"
                android:src="@drawable/ic_address"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_alamat"
                android:layout_toEndOf="@id/addressImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:text="@string/alamat"
                android:layout_toEndOf="@id/addressImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/dobImageView"
                android:src="@drawable/ic_dob"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="@string/label_tgl_lahir"
                android:layout_toEndOf="@id/dobImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:text="@string/tgl_lahir"
                android:layout_toEndOf="@id/dobImageView"
                style="@style/profileDetailsMiniText" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>